--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             let str = ""
             resultcount.innerHTML = response.totalResults;
             for (let item of response.articles) {
-                str = str + `<div class="card my-4 mx-2" style="width: 18rem;">
+                str = str + `<div class="card my-4 mx-2" style="width: 18rem;">cc
                 <img src="${item.urlToImage}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">${item.title}</h5>
